--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,33 @@
-name: Eleventy Build
-on: [push]
+name: Build Eleventy
+
+on:
+  push:
+    branches:
+      - master
 
 jobs:
-  build_deploy:
-    runs-on: ubuntu-18.04
+  build:
+    runs-on: ubuntu-20.04
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
-      - uses: actions/checkout@master
-      - name: Build
-        uses: TartanLlama/actions-eleventy@master
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          install_dependencies: true
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies & build
+        run: |
+          npm install
+          npm run build
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: _site
-          publish_branch: gh-pages
+          publish_dir: ./_site
           github_token: ${{ secrets.GITHUB_TOKEN }}
