--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,18 @@
-name: Build Eleventy
-
-on:
-  push:
-    branches:
-      - master
+name: Eleventy Build
+on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-20.04
-
-    strategy:
-      matrix:
-        node-version: [12.x]
-
+  build_deploy:
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@master
+      - name: Build
+        uses: TartanLlama/actions-eleventy@master
         with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies & build
-        run: |
-          npm install
-          npm run build
-
+          install_dependencies: true
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./_site
+          publish_dir: _site
+          publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
