--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@11ty/eleventy": "^1.0.2",
+		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0"
 	}
 }
